Clean up documents

--- a/swift6.0/int128.md
+++ b/swift6.0/int128.md
@@ -1,14 +1,14 @@
 ## Int128
 
-Swift 6.0 이전에는 정수를 나타내는 자료형으로 `Int`, `Int8`, `Int16`, `Int32`, `Int64`, `UInt8`, `UInt16`, `UInt32`, `UInt64`가 있다. [SE-0425](https://github.com/swiftlang/swift-evolution/blob/main/proposals/0425-int128.md)는 128비트가 64비트 만큼 일반적으로 사용되지 않지만 표준 라이브러리에 추가하는 것이 합리적이므로, `Int128`과 `UInt128` 타입을 추가하자고 제안한다.
+Swift 6.0 이전에는 정수를 나타내는 자료형으로 `Int`, `Int8`, `Int16`, `Int32`, `Int64`, `UInt8`, `UInt16`, `UInt32`, `UInt64`가 있습니다. [SE-0425](https://github.com/swiftlang/swift-evolution/blob/main/proposals/0425-int128.md)는 128비트가 64비트 만큼 일반적으로 사용되지 않지만 표준 라이브러리에 추가하는 것이 합리적이므로, `Int128`과 `UInt128` 타입을 추가하자고 제안합니다.
 
 ### 정수 자료형
 
-앞에 U는 signed, unsigned를 나타내고 뒤에 숫자는 비트를 의미한다. 예를 들어, `Int8`은 signed로 부호가 있어서 음수와 양수를 모두 나타낼 수 있고, 8비트를 사용해서 -128 ~ 127 범위의 숫자를 표현할 수 있습니다.
+앞에 U는 signed, unsigned를 나타내고 뒤에 숫자는 비트를 의미합니다. 예를 들어, `Int8`은 signed로 부호가 있어서 음수와 양수를 모두 나타낼 수 있고, 8비트를 사용해서 -128 ~ 127 범위의 숫자를 표현할 수 있습니다.
 
 ```swift
 let min = Int8.min // -128(10000000)
 let max = Int8.max // 127(01111111)
 ```
 
-`Int`와 같이 비트가 명시되어 있지 않으면 시스템 아키텍처에 따라서 지정된다. 예를 들어, 32비트에서는 `Int32`로, 64비트에서는 `Int64`로 지정된다.
+`Int`와 같이 비트가 명시되어 있지 않으면 시스템 아키텍처에 따라서 지정됩니다. 예를 들어, 32비트에서는 `Int32`로, 64비트에서는 `Int64`로 지정됩니다.
